--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bulma": "^0.9.4",
+    "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
