--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "mysql2": "^3.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
